--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<license>
 			<name>MIT License</name>
 			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
 		</license>
 	</licenses>
 
@@ -99,6 +100,16 @@
 	<profiles>
 		<profile>
 			<id>release</id>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+				<repository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+				</repository>
+			</distributionManagement>
 			<build>
 				<plugins>
 					<plugin>
