--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 							<minimizeJar>true</minimizeJar>
 							<keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
 							<createDependencyReducedPom>false</createDependencyReducedPom>
-							<createSourcesJar>true</createSourcesJar>
+							<createSourcesJar>false</createSourcesJar>
 							<artifactSet>
 								<includes>
 									<include>org.bouncycastle:bcprov-jdk15on</include>
