--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ install:
 before_script:
 - mvn --update-snapshots dependency-check:check -Pdependency-check
 script:
-- mvn clean test jacoco:report verify -Pcoverage
+- mvn clean test
+after_success:
+- "if [[ ${TRAVIS_JDK_VERSION} == 'oraclejdk8' ]]; then mvn test jacoco:report verify -Pcoverage; fi"
 cache:
   directories:
   - $HOME/.m2
