--- a/.travis.yml
+++ b/.travis.yml
@@ -39,13 +39,11 @@ deploy:
   skip_cleanup: true
   on:
     repo: cryptomator/siv-mode
-    branch: master
+    branch: develop
     condition: $TRAVIS_TAG = ''
-    jdk: openjdk7
 - provider: script # RELEASES
   script: mvn clean versions:set -DnewVersion=${TRAVIS_TAG} deploy -DskipTests -Prelease --settings settings.xml
   skip_cleanup: true
   on:
     repo: cryptomator/siv-mode
     tags: true
-    jdk: openjdk7
