--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,9 @@ addons:
     notification_email: sebastian.stenzel@cryptomator.org
     build_command_prepend: "mvn clean"
     build_command: "mvn -DskipTests=true compile"
-    branch_pattern: master
+    branch_pattern: release.*
 before_deploy:
+- jdk_switcher use oraclejdk9
 - gpg --import 34C80F11.gpg
 deploy:
 - provider: script # SNAPSHOTS
