using moditect to add module-info after shading, thus no longer "requires static bcprov.jdk15on"

--- a/pom.xml
+++ b/pom.xml
@@ -84,30 +84,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
-				<executions>
-					<execution>
-						<id>default-compile</id>
-						<configuration>
-							<release>9</release>
-							<includes>
-								<include>module-info.java</include>
-							</includes>
-						</configuration>
-					</execution>
-					<execution>
-						<id>base-compile</id>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-						<configuration>
-							<excludes>
-								<exclude>module-info.java</exclude>
-							</excludes>
-						</configuration>
-					</execution>
-				</executions>
 				<configuration>
-					<source>9</source>
+					<source>1.7</source>
 					<target>1.7</target>
 					<release>7</release>
 					<encoding>UTF-8</encoding>
@@ -139,13 +117,6 @@
 							<keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
 							<createDependencyReducedPom>false</createDependencyReducedPom>
 							<createSourcesJar>false</createSourcesJar>
-							<transformers>
-								<!-- re-add module-info.class -->
-								<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>module-info.class</resource>
-									<file>${project.build.outputDirectory}/module-info.class</file>
-								</transformer>
-							</transformers>
 							<artifactSet>
 								<includes>
 									<include>org.bouncycastle:bcprov-jdk15on</include>
@@ -167,6 +138,30 @@
 									</excludes>
 								</filter>
 							</filters>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.moditect</groupId>
+				<artifactId>moditect-maven-plugin</artifactId>
+				<version>1.0.0.Alpha2</version>
+				<executions>
+					<execution>
+						<id>add-module-infos</id>
+						<phase>package</phase>
+						<goals>
+							<goal>add-module-info</goal>
+						</goals>
+						<configuration>
+							<module>
+								<moduleInfo>
+									<name>org.cryptomator.siv</name>
+									<exports>
+										org.cryptomator.siv;
+									</exports>
+								</moduleInfo>
+							</module>
 						</configuration>
 					</execution>
 				</executions>
