--- a/.travis.yml
+++ b/.travis.yml
@@ -14,23 +14,13 @@ before_script:
 script:
 - mvn clean test jacoco:report verify -Pcoverage
 after_success:
-- jdk_switcher use oraclejdk8
-- curl -o ~/codacy-coverage-reporter-assembly-latest.jar https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.1/codacy-coverage-reporter-4.0.1-assembly.jar
-- $JAVA_HOME/bin/java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r target/site/jacoco/jacoco.xml
+- curl -o ~/codacy-coverage-reporter.jar https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.2/codacy-coverage-reporter-4.0.2-assembly.jar
+- $JAVA_HOME/bin/java -jar ~/codacy-coverage-reporter.jar report -l Java -r target/site/jacoco/jacoco.xml
 cache:
   directories:
   - $HOME/.m2
-before_deploy:
-- jdk_switcher use oraclejdk9
 deploy:
-- provider: script # SNAPSHOTS
-  script: mvn clean deploy -DskipTests -Prelease
-  skip_cleanup: true
-  on:
-    repo: cryptomator/siv-mode
-    branch: develop
-    condition: $TRAVIS_TAG = ''
-- provider: script # RELEASES
+- provider: script
   script: mvn clean versions:set -DnewVersion=${TRAVIS_TAG} deploy -DskipTests -Prelease
   skip_cleanup: true
   on:
