updated release build config [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
     repo: cryptomator/siv-mode
     tags: true
 after_deploy:
-  - "echo '{\"close\": \"1\"}' | curl -X POST -u cryptobot:${BINTRAY_API_KEY} https://api.bintray.com/maven_central_sync/cryptomator/maven/siv-mode/versions/${TRAVIS_TAG}"
+  - "echo '{\"close\": \"1\"}' | curl --max-time 10 -X POST -u cryptobot:${BINTRAY_API_KEY} https://api.bintray.com/maven_central_sync/cryptomator/maven/siv-mode/versions/${TRAVIS_TAG}"
