Since Travis CI is still using OpenJDK 11.0.2, the JavaDoc plugin needs some additional configuration to work properly. (Will be fixed in JDK 11.0.3) [ci skip]

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,8 @@
 				<version>3.8.1</version>
 				<configuration>
 					<release>7</release>
+					<source>1.7</source> <!-- redundant to <release> but needed until https://bugs.openjdk.java.net/browse/JDK-8219474 is fixed (see javadoc config) -->
+					<target>1.7</target>
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 				</configuration>
@@ -250,6 +252,9 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+							<source>1.7</source> <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8219474 -->
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
