--- a/.github/workflows/publish-central.yml
+++ b/.github/workflows/publish-central.yml
@@ -7,7 +7,7 @@ on:
         required: true
         default: '0.0.0'
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
