--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,12 @@
 								</goals>
 							</execution>
 						</executions>
+						<!-- workaround for https://github.com/jacoco/jacoco/issues/407 -->
+						<configuration>
+							<excludes>
+								<exclude>META-INF/**</exclude>
+							</excludes>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
