--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.outputTimestamp>10</project.build.outputTimestamp>
 
 		<!-- dependencies -->
 		<bouncycastle.version>1.70</bouncycastle.version>
@@ -98,6 +99,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.9.0</version>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<version>3.0.0</version>
@@ -110,8 +116,9 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<message>You need at least JDK 11.0.3 to build this project.</message>
-									<version>[11.0.3,)</version>
+									<!-- In order to create a reproducible build, see https://bugs.openjdk.java.net/browse/JDK-8258117 -->
+									<message>You need at least JDK 18 to build this project.</message>
+									<version>[18,)</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
