--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v2
         with:
-          java-version: 11
-          distribution: 'temurin'
+          java-version: 18-ea
+          distribution: 'zulu'
           cache: 'maven'
       - name: Cache SonarCloud packages
         uses: actions/cache@v2
