--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,8 +20,8 @@ jobs:
         fetch-depth: 2
     - uses: actions/setup-java@v3
       with:
-        java-version: 18-ea
-        distribution: 'zulu'
+        java-version: 20
+        distribution: 'temurin'
         cache: 'maven'
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
