--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.outputTimestamp>10</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2000-01-01T00:00:00Z</project.build.outputTimestamp>
 
 		<!-- dependencies -->
 		<bouncycastle.version>1.70</bouncycastle.version>
